--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -2,9 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
   <title>Modify chosen player</title>
-  <link rel="stylesheet" href = "https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+
 </head>
 <body>
 <h1>Edit chosen player</h1>
@@ -22,6 +28,14 @@
 
     <label for="player-level">Set player level  </label>
     <input type="number" th:field="*{playerLevel}" id="player-level">
+    <br><br>
+
+    <label for="e-mail">Type player email  </label>
+    <input type="text" th:field="*{email}" id="e-mail">
+    <br><br>
+
+    <label for="player-password">Set player password  </label>
+    <input type="number" th:field="*{password}" id="player-password">
     <br><br>
 
     <input type="submit" value="Edit player"/>
