--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,20 +2,60 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>THE GAME. Hello page</title>
-    <link rel="stylesheet" href = "https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-</head>
-<body>
-<div th:align="center">
-    <h1>...</h1>
-    <h1>Welcome to THE GAME</h1>
-    <th:block>
-        <a th:href="'login'">
-            <h3>Please enter your credentials</h3>
-        </a>
-    </th:block>
-</div>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <title>THE GAME. Hello page</title>
+
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+        }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
+    </style>
+
+
+</head>
+<body class="text-center">
+<!--<div th:align="center">-->
+<!--    <h1>...</h1>-->
+<!--    <h1>Welcome to THE GAME</h1>-->
+<!--    <th:block>-->
+<!--        <a th:href="'login'">-->
+<!--            <h3>Please enter your credentials</h3>-->
+<!--        </a>-->
+<!--    </th:block>-->
+<!--</div>-->
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class="masthead mb-auto">
+        <h3 class="masthead-brand">THE GAME</h3>
+
+    </header>
+
+    <main role="main" class="inner cover">
+        <h1 class="cover-heading">Welcome to THE GAME</h1>
+        <p class="lead">Lead the army of brave warriors, and defeat the DRAGON</p>
+        <p class="lead">
+            <a th:href="'login'" class="btn btn-lg btn-secondary">Please enter your credentials</a>
+        </p>
+    </main>
+
+    <footer class="mastfoot mt-auto">
+        <div class="inner">
+            <p>THE GAME, 2023</p>
+        </div>
+    </footer>
+</div>
 </body>
 </html>
