не работает rolesList

--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -35,7 +35,7 @@
     <br><br>
 
     <label for="player-password">Set player password  </label>
-    <input type="number" th:field="*{password}" id="player-password">
+    <input type="text" th:field="*{password}" id="player-password">
     <br><br>
 
     <input type="submit" value="Edit player"/>
