--- a/src/main/resources/templates/players-action.html
+++ b/src/main/resources/templates/players-action.html
@@ -14,7 +14,19 @@
 </head>
 
 <body>
-<h1>Players for our RPG</h1>
+<ul class="nav bg-dark  ">
+    <li class="nav-item ">
+        <a class="nav-link active text-light"
+           th:text="|${title.getNickName()} with roles: ${title.getRoles()}|"></a>
+    </li>
+
+    <li class="nav-item navbar-nav ml-auto pr-3 ">
+        <a class="nav-link text-secondary" href="/logout">logout</a>
+    </li>
+</ul>
+
+
+<!--<h1>Players for our RPG</h1>-->
 <div>
     <table class="table table-success table-striped">
         <thead>
@@ -39,8 +51,12 @@
             <td th:text="${user.getPlayerLevel()}"/>
             <td th:text="${user.getEmail()}"/>
             <td th:text="${user.getPassword()}"/>
-            <td th:text="${user.getRoles()}"/>
-
+<!--            <td th:text="${user.getRoles()}"/>-->
+            <td>
+            <th:block th:each="role : ${user.roles}">
+                <span th:text="${role.getNoPrefix()}"></span>
+            </th:block>
+            </td>
 
 
             <td>
