--- a/src/main/resources/templates/player.html
+++ b/src/main/resources/templates/player.html
@@ -15,7 +15,7 @@
 <ul class="nav bg-dark  ">
     <li class="nav-item ">
         <a class="nav-link active text-light"
-           th:text="|${title.getNickName()} with roles: ${title.getRoles()}|"></a>
+           th:text="|${title.getNickName()} with roles: ${title.convertSetOfRoleToString(title.getRoles())}|"></a>
     </li>
 
     <li class="nav-item navbar-nav ml-auto pr-3 ">
