--- a/src/main/resources/templates/players-action.html
+++ b/src/main/resources/templates/players-action.html
@@ -17,7 +17,7 @@
 <ul class="nav bg-dark  ">
   <li class="nav-item ">
     <a class="nav-link active text-light"
-       th:text="|${title.getNickName()} with roles: ${title.getRoles()}|"></a>
+       th:text="|${title.getNickName()} with roles: ${title.convertSetOfRoleToString(title.getRoles())}|"></a>
   </li>
 
   <li class="nav-item navbar-nav ml-auto pr-3 ">
@@ -163,6 +163,7 @@
 
                     <!-- modal delete -->
                     <div class="modal fade" th:id="${'delete'+user.id}" tabindex="-1" aria-hidden="true">
+<!--                      <form th:action="@{/admin/{id}(id=${user.getId()})}" th:method="delete" >-->
                       <form th:action="@{/admin/{id}(id=${user.getId()})}" th:method="delete" >
                         <div class="modal-dialog">
                           <div class="modal-content">
