--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -1,75 +1,75 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<html lang="en">
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!--<!DOCTYPE html>-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--  &lt;!&ndash; Required meta tags &ndash;&gt;-->
+<!--  <meta charset="utf-8">-->
+<!--  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
+<!--  &lt;!&ndash; Bootstrap CSS &ndash;&gt;-->
+<!--  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"-->
+<!--        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
 
-  <title>Adding new player</title>
+<!--  <title>Adding new player</title>-->
 
-</head>
-<body>
-<h1>Add new player to your party</h1>
+<!--</head>-->
+<!--<body>-->
+<!--<h1>Add new player to your party</h1>-->
 
-<div th:align="center">
-  <form th:method="POST" th:action="@{/admin}" th:object="${user}">
-    <br><br>
-    <label for="nickname">Set nickname  </label>
-    <input type="text" th:field="*{nickName}" id="nickname">
-    <br><br>
+<!--<div th:align="center">-->
+<!--  <form th:method="POST" th:action="@{/admin}" th:object="${user}">-->
+<!--    <br><br>-->
+<!--    <label for="nickname">Set nickname  </label>-->
+<!--    <input type="text" th:field="*{nickName}" id="nickname">-->
+<!--    <br><br>-->
 
-    <label for="player-class">Set player class  </label>
-    <input type="text" th:field="*{playerClass}" id="player-class">
-    <br><br>
+<!--    <label for="player-class">Set player class  </label>-->
+<!--    <input type="text" th:field="*{playerClass}" id="player-class">-->
+<!--    <br><br>-->
 
-    <label for="player-level">Set player level  </label>
-    <input type="number" th:field="*{playerLevel}" id="player-level">
-    <br><br>
+<!--    <label for="player-level">Set player level  </label>-->
+<!--    <input type="number" th:field="*{playerLevel}" id="player-level">-->
+<!--    <br><br>-->
 
-    <label for="e-mail">Type player email  </label>
-    <input type="text" th:field="*{email}" id="e-mail">
-    <br><br>
+<!--    <label for="e-mail">Type player email  </label>-->
+<!--    <input type="text" th:field="*{email}" id="e-mail">-->
+<!--    <br><br>-->
 
-    <label for="player-password">Set player password  </label>
-    <input type="text" th:field="*{password}" id="player-password">
-    <br><br>
+<!--    <label for="player-password">Set player password  </label>-->
+<!--    <input type="text" th:field="*{password}" id="player-password">-->
+<!--    <br><br>-->
 
-    <label>
-    <select required class="form-control form-control-sm w-50 mx-auto"  th:field="*{roles}">
-      <option  th:each="role : ${rolesList}"
-               th:text="${role}"
-               th:value="${role.getId()}">
-      </option>
-    </select>
-    </label>
-
-
-    <input type="submit" value="Add player"/>
-
-  </form>
-
-</div>
+<!--    <label>-->
+<!--    <select required class="form-control form-control-sm w-50 mx-auto"  th:field="*{roles}">-->
+<!--      <option  th:each="role : ${rolesList}"-->
+<!--               th:text="${role}"-->
+<!--               th:value="${role.getId()}">-->
+<!--      </option>-->
+<!--    </select>-->
+<!--    </label>-->
 
 
-<div th:align="center">
-  <br>
-  <br>
-  <a th:href="@{/admin}">
-    <h6>Return to main page</h6>
-  </a>
-</div>
+<!--    <input type="submit" value="Add player"/>-->
 
-<div th:align="center">
-  <br>
-  <br>
-  <a th:href="@{/logout}">
-    <h8>Logout</h8>
-  </a>
-</div>
+<!--  </form>-->
 
-</body>
-</html>
+<!--</div>-->
+
+
+<!--<div th:align="center">-->
+<!--  <br>-->
+<!--  <br>-->
+<!--  <a th:href="@{/admin}">-->
+<!--    <h6>Return to main page</h6>-->
+<!--  </a>-->
+<!--</div>-->
+
+<!--<div th:align="center">-->
+<!--  <br>-->
+<!--  <br>-->
+<!--  <a th:href="@{/logout}">-->
+<!--    <h8>Logout</h8>-->
+<!--  </a>-->
+<!--</div>-->
+
+<!--</body>-->
+<!--</html>-->
